Tue May 05 04:09:24 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/collapse.t: Add test coverage for
	  Enquire::set_collapse_key() with 1 and 2 parameters.

Fri May 01 12:16:29 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Update check for -fvisibility to match xapian-core's.

Fri May 01 12:15:28 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Simplify test of Ruby version.

Fri May 01 12:14:31 GMT 2015  Olly Betts <olly@survex.com>

	* INSTALL: IRIX is past EOL so drop information about IRIX make.

Fri May 01 12:05:53 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i: Add workaround for Perl defining a seed() macro which
	  breaks '#include <algorithm>' undef C++11 with GCC.

Fri May 01 11:04:33 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,m4/ax_cxx_compile_stdcxx_11.m4: Require a C++11
	  compiler.

Fri Apr 24 03:26:10 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Don't wrap Query::LEAF_* - they're for internal
	  use in xapian-core.
	* python/smoketest.py: Add test_internal_enums_not_wrapped to check
	  that xapian.Query has no attributes starting with "LEAF_".

Mon Apr 13 06:22:15 GMT 2015  Olly Betts <olly@survex.com>

	* tcl8/tcl.i: Adjust precedence of the typecheck typemap for wrapping
	  constructing a query from a Tcl list so that we disambiguate this
	  from the new OP_WILDCARD constructor correctly.

Thu Apr 09 21:47:28 GMT 2015  Olly Betts <olly@survex.com>

	* ruby/Makefile.am: Ship generate-rdoc-stubs in the tarball.  Reported
	  by Matthias Klose in https://bugs.debian.org/782270

Fri Mar 13 10:33:47 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: Fix 'make install' when
	  building from git with --disable-documentation.  Fix to handle a
	  VPATH build from a tarball when the generated docs will be in
	  $(srcdir).

Fri Mar 13 05:28:28 GMT 2015  Olly Betts <olly@survex.com>
